--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
